Use display flex to align post meta (Safari issue)

--- a/app/assets/stylus/widgets/post-meta.styl
+++ b/app/assets/stylus/widgets/post-meta.styl
@@ -6,6 +6,8 @@
         margin 12px 0 40px
 
         @media screen and ( min-width $screen-md )
+            align-items flex-end
+            display flex
             font-size 20px
             margin-top 22px
 
@@ -14,7 +16,7 @@
             margin-bottom 12px
 
             @media screen and ( min-width $screen-md )
-                display inline-block
+                margin-bottom 0
 
         &-author
             color $tiffany
